# WaylandSolver

./: .gitignore  LICENSE  README.md  main.py  meson.build
data/: meson.build  work.idev2580dev.waylandsolver.gresource.xml
data/ui/: HeaderBar.ui  MainWindow.ui  SolverWindow.ui
solvers/: electron.py
wayland_solver/: application.py  headerbar.py  mainwindow.py  solver.py  solverwindow.py
